2008-09-28   <> 

	* EngineManager.cs: We have to use and check for plink.exe and not
	  putty.exe.

2008-09-28   <> 

	* EngineManager.cs: Check if sshProgram is present on the harddisk.
	
	  Added hack for putty support: if sshProgram is putty.exe use -P instead
	  of -p.

2008-09-28   <> 

	* EngineManager.cs: Implemented SSH tunnel support. (closes trac ticket #64)

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs, AssemblyInfo.cs.in: Removed AssemblyInfo.cs.in files, not
	  needed anymore as we use a shared AssemblyVersion.cs(.in) now.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Frontend.mdp: Removed assembly attributes that are now part of the shared
	  AssemblyVersion.cs file.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-07-07  Mirco Bauer <meebey@meebey.net> 

	* EngineManager.cs: Using superseded method now.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* ChatView.cs, Frontend.mdp: Delete obsolete ChatView.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* Frontend.mdp: Updated using MonoDevelop 0.18.1
